# RobotexLineFollowerMain

./: .gitignore  CMakeLists.txt  readme_init.txt
arduino/src/: CMakeLists.txt  LineFollowerMain.ino  main.cpp
arduino/src/cameramessages/: DataBufferReceiver.cpp  DataBufferReceiver.h  LineSegment.h  Message.cpp  Message.h
arduino/src/cameramessages/messagebuffer/: LineSegmentMessageBuffer.h
arduino/src/data/: LineSegment.h
arduino/src/databuffer/: DataBufferReceiver.cpp  DataBufferReceiver.h
arduino/src/engine/: Engine.cpp  Engine.h
arduino/src/line/: Line.cpp  Line.h  RowLinePosition.cpp  RowLinePosition.h
arduino/src/steering/: FrontWheels.cpp  FrontWheels.h  PositionToSteering.cpp  PositionToSteering.h  ScreenToWorld.cpp  ScreenToWorld.h  Steering.cpp  Steering.h
arduino/src/steering/world/: ScreenToWorld.cpp  ScreenToWorld.h  ScreenToWorldY.cpp
doc/: ScreenToWorld_Y.ods
pcb/MainBoard/: .gitignore  MainBoard-cache.lib  MainBoard.bak  MainBoard.kicad_pcb  MainBoard.kicad_pcb-bak  MainBoard.net  MainBoard.pro  SectionCamera.bak  SectionCamera.sch  SectionCommBuffer.bak  SectionCommBuffer.sch  SectionMainControl.bak  SectionMainControl.sch  SectionPower.bak  SectionPower.sch  fp-lib-table
pcb/MainBoard/LibMod/Indrek/: DcDcConverter.bak  DcDcConverter.lib  levelshifter_74hc4050d.bak  notgate_74hc04.dcm  shiftregister_74hc595.bak
pcb/MainBoard/LibMod/Indrek/MotorController.pretty/: MotorController.kicad_mod
pcb/MainBoard/LibMod/YJ_arduino/: arduino.bak  arduino.lib
pcb/MainBoard/gerber/: MainBoard-B.Cu.gbl  MainBoard-B.Mask.gbs  MainBoard-B.SilkS.gbo  MainBoard-Edge.Cuts.gm1  MainBoard-F.Cu.gtl  MainBoard-F.Mask.gts  MainBoard-F.SilkS.gto  MainBoard-NPTH.drl  MainBoard.drl
pcb/PowerBoard/: .gitignore  PowerBoard-cache.lib  PowerBoard.bak  PowerBoard.kicad_pcb  PowerBoard.kicad_pcb-bak  PowerBoard.net  PowerBoard.pro  PowerBoard.sch  fp-lib-table
pcb/PowerBoard/LibMod/Indrek/: OnOffDoubleSwitch.bak
pcb/PowerBoard/gerber/: PowerBoard-B.Cu.gbr  PowerBoard-B.Mask.gbr  PowerBoard-B.SilkS.gbr  PowerBoard-Edge.Cuts.gbr  PowerBoard-F.Cu.gbr  PowerBoard-F.Mask.gbr  PowerBoard-F.SilkS.gbr  PowerBoard.drl
src/: LineFollowerMain.ino  main.cpp  main.h
src/databuffer/: DataBufferReceiver.cpp  DataBufferReceiver.h
test/: CMakeLists.txt
test/fake/: Arduino.h  CMakeLists.txt  Servo.cpp  Servo.h
test/src/: exampleTest.cpp  exampletest.cpp  exampletest2.cpp
test/src/line/: LineTest.cpp  RowLinePositionTest.cpp
test/src/steering/: FrontWheelTest.cpp  ScreenToWorldTest.cpp
test/src/steering/world/: ScreenToWorldTest.cpp
(+2 files in other folders)
